--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="card card-container">
-      <img id="profile-img" class="profile-img-card" src="logo.jpg" />
+      <img id="profile-img" class="profile-img-card" src="logo.png" />
       <form class="form-signin" action="$PORTAL_ACTION$" method="POST">
         <input type="text" id="Usuario" name="auth_user" class="form-control" placeholder="Usuario" required autofocus>
         <input type="password" id="Senha" name="auth_pass" class="form-control" placeholder="Senha" required>
